Add cookie & header param support